fix mobile view if shard name is too long

--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -136,6 +136,9 @@ ul.not-list li {
   padding-bottom: 30px;
   margin-bottom: 30px;
   border-bottom: 1px solid #c1c4ca;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow:hidden;
 }
 
 .page__subheading {
